PSR-1836: address accessibility issue regarding minimum height of change/remove links when they wrap.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,6 +40,10 @@ a[href="none"] {
   .psr-scrollable-pane {
     overflow-x: scroll;
   }
+
+  .two-column-triple-actiion__action-list-item {
+    line-height: 24px;
+  }
 }
 
 @media print {
